<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba 5</string>
    <string name="hello_world">Hello World!</string>
    <string name="title_activity_status">Status</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_detailed">Detailed</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="action_settings">Settings</string>
    <string name="status_button_title">Submit</string>
    <string name="txVw1_text">Number of Character left</string>
    <string name="actBar_Menu_timeline">Timeline</string>
    <string name="actBar_Menu_Status">Status</string>
    <string name="actBar_Menu_Preferences">Preferences</string>
    <string name="actBar_Menu_timeline_cond">TmLine</string>
    <string name="actBar_Menu_Status_cond">St</string>
    <string name="actBar_Menu_Preferences_cond">Pref</string>
    <string name="UserName_text">UserName</string>
    <string name="PassWord_text">PassWord</string>
    <string name="URI_text">Base Uri</string>
    <string name="MaxMensOnTimeLine_text">Max messages on the Timeline</string>
    <string name="MaxcharactersbyMsg_text">Max characters on each message</string>
    <string name="ApplyPref_button">Apply</string>
    <string name="timeline_list">Timeline list</string>
    <string name="status_success_msg">Status \'%s\' successfully submited.</string>
    <string name="status_error_msg">Failed to connect to twitter service.</string>
    <string name="messageColumnTitle">Message</string>
    <string name="authorColumnTitle">Author</string>
    <string name="dateColumnTitle">Date</string>
    <string name="txVw2_text">140</string>
    <string name="Detail"></string>
    <string name="timeline_Hours">Hours</string>
    <string name="timeline_Minutes">Minutes</string>
    <string name="timeline_Seconds">Seconds</string>
    <string name="timeline_Days">Days</string>
    <string name="btnOK">OK</string>
    <string name="Refresh_Button">Refresh</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="UserInfo">UsrInfo</string>
    <string name="imageviewdesc">User Image</string>
    <string name="AutoUp">Auto Update</string>
    <string name="btnloaduserinfo">Load User Info</string>
    <string name="labeluserinfoname">Name</string>
    <string name="labeluserinfostatus">Status</string>
    <string name="labeluserinfofriends">Friends</string>
    <string name="labeluserinfofollowers">Followers</string>
	<string name="nonetworkmessage">No network connectivity available.</string>
	<string name="labeldetailid">ID:</string>
	<string name="labeldetailauthor">Author:</string>
	<string name="labeldetailmsg">Message:</string>
	<string name="labeldetaildate">Date:</string>
	<string name="btnBack">Back</string>
	<string name="bntEmail">Share by Email</string>
	<string name="noemailclient">There are no email clients installed.</string>
	<string name="shareemailsubject">Share Yamba Status</string>
	<string name="statusnotificationtitle">Yamba 5 Status.</string>
	<string name="statusnotificationqueuetext">%d status messages saved in queue.</string>
	<string name="statusnotificationsenttext">%d status messages sent from queue.</string>
	<string name="timelinenotificationtitle">Yamba 5 Timeline.</string>
	<string name="timelinenotificationtext">%d new messages in timeline.</string>
	<string name="latest_status">Yamba 5 - Latest Status</string>
</resources>