<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    tools:context=".TimelineActivity">

    <TextView
        android:id="@+id/messageColumnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/messageColumnTitle" />

	<TextView
	    android:id="@+id/authorColumnTextView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginRight="@dimen/activity_horizontal_margin"
	    
	    android:text="@string/authorColumnTitle" />

	<TextView
        android:id="@+id/dateColumnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateColumnTitle" />
</LinearLayout>